--- a/wp-content/themes/takehome/assets/css/standard.css
+++ b/wp-content/themes/takehome/assets/css/standard.css
@@ -840,3 +840,9 @@ footer section div:nth-child(3) ul li a:hover {
   color: var(--purple2);
   font-size: 6rem;
 }
+
+/*Important overflow amp body style */
+html.i-amphtml-fie > body,
+html.i-amphtml-singledoc > body {
+  overflow: hidden !important;
+}
